[package]
name = "resource-id"
version = "0.1.0"
edition = "2021"
authors = [
    "DJ Spatoulas <dspatoulas21@gmail.com>"
]
description = "A step towards generating more useful and intuitive unique resource identifiers"
license-file = "LICENSE"
repository = "https://github.com/dspatoulas/resource-id"

[dependencies]

# Web Frameworks
schemars = { version = "0.8"}

# Database libs
sqlx = { version = "0.8", features = ["postgres"] }

# Core Utility libs
thiserror = "2"
ulid = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
strum = { version = "0.27", features = ["strum_macros", "derive"] }
