[package]
name = "resource-id"
version = "0.2.0"
edition = "2024"
authors = [
    "DJ Spatoulas <dspatoulas21@gmail.com>"
]
description = "A step towards generating more useful and intuitive unique resource identifiers"
license-file = "LICENSE"
repository = "https://github.com/dspatoulas/resource-id"

[dependencies]

# Web Frameworks
schemars = { version = "1.2.0" }

# Database libs
sqlx = { version = "0.8.6", features = ["tls-rustls", "postgres", "time", "runtime-tokio-rustls"] }

# Core Utility libs
thiserror = "2"
ulid = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
strum = { version = "0.27", features = ["strum_macros", "derive"] }
